--- a/src/pug-example/package.json
+++ b/src/pug-example/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "ja-yaml": "^3.13.1",
     "jstransformer-sass": "^1.0.0",
     "npm-run-all": "^4.1.5",
     "pug": "^2.0.3",
