--- a/src/webpack-example/package.json
+++ b/src/webpack-example/package.json
@@ -1,15 +1,15 @@
 {
   "name": "webpack-example",
   "version": "1.0.0",
-  "description": "",
+  "description": "webpack-example",
   "main": "main.js",
   "scripts": {
     "clean-all": "node -e \"const fs=require('fs');const files=['./package-lock.json', './yarn.lock', './node_modules'];files.forEach((o)=>{fs.unlink(o, (err)=>{})});\"",
     "clean-cache": "npm cache clear --force",
     "build:webpack": "npx webpack --config ./webpack.config.js",
-    "build:terser": "terser -m -c -o ./out/bundle.js ./out/main.js",
     "build:clean": "node -e \"const fs=require('fs');fs.unlink('./out/main.js', err=>{})\"",
-    "build": "npm-run-all build:*"
+    "build": "npm-run-all build:*",
+    "terser": "terser -m -c -o ./out/bundle.js ./out/main.js"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +21,7 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "npm-run-all": "^4.1.5",
+    "terser-webpack-plugin": "^1.2.4",
     "uglifyjs-webpack-plugin": "^2.1.3",
     "webpack": "^4.31.0",
     "webpack-cli": "^3.3.2"
