--- a/src/vue/vuewebpack-example/makefile
+++ b/src/vue/vuewebpack-example/makefile
@@ -1,5 +1,6 @@
 OUTPUT=./output
 WEBPACK=npx webpack
+WEBPACK_SERVER=npx webpack-dev-server
 
 .PHONY: clean
 clean:
@@ -8,3 +9,7 @@ clean:
 .PHONY: build
 build:
 	@$(WEBPACK)
+
+.PHONY: dev
+dev:
+	@$(WEBPACK_SERVER)
