--- a/src/vue/vuewebpack-example/package.json
+++ b/src/vue/vuewebpack-example/package.json
@@ -12,8 +12,8 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
+    "@babel/core": "^7.6.2",
+    "@babel/preset-env": "^7.6.2",
     "@webpack-cli/init": "^0.2.2",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
@@ -21,28 +21,29 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "chai": "^4.2.0",
-    "css-loader": "^3.1.0",
+    "css-loader": "^3.2.0",
     "html-webpack-plugin": "^3.2.0",
-    "mocha": "^6.2.0",
+    "jquery": "^3.4.1",
+    "mocha": "^6.2.1",
     "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
     "pug": "^2.0.4",
     "pug-loader": "^2.4.0",
     "pug-plain-loader": "^1.0.0",
-    "sass-loader": "^7.1.0",
+    "sass-loader": "^7.3.1",
     "style-loader": "^0.23.1",
-    "terser-webpack-plugin": "^1.3.0",
+    "terser-webpack-plugin": "^1.4.1",
     "url-loader": "^2.1.0",
     "vue": "^2.6.10",
     "vue-loader": "^15.7.1",
-    "vue-router": "^3.0.7",
+    "vue-router": "^3.1.3",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
     "vuex": "^3.1.1",
-    "webpack": "^4.38.0",
-    "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.7.2"
+    "webpack": "^4.41.0",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.2"
   },
   "dependencies": {
     "raw-loader": "^3.1.0"
