--- a/src/vue/vuewebpack-example/package.json
+++ b/src/vue/vuewebpack-example/package.json
@@ -12,9 +12,10 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/preset-env": "^7.8.4",
+    "@babel/core": "^7.8.7",
+    "@babel/preset-env": "^7.8.7",
     "@webpack-cli/init": "^0.3.0",
+    "axios": "^0.19.2",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
@@ -24,7 +25,7 @@
     "css-loader": "^3.4.2",
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.4.1",
-    "mocha": "^7.0.1",
+    "mocha": "^7.1.0",
     "node-sass": "^4.13.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
@@ -38,11 +39,11 @@
     "url-loader": "^3.0.0",
     "vue": "^2.6.11",
     "vue-loader": "^15.9.0",
-    "vue-router": "^3.1.5",
+    "vue-router": "^3.1.6",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.11",
     "vuex": "^3.1.2",
-    "webpack": "^4.41.6",
+    "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
   }
