--- a/src/vuetify-example/package.json
+++ b/src/vuetify-example/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "webpack.init": "npx webpack init",
     "webpack.build": "webpack",
-    "webpack.start": "webpack-dev-server"
+    "webpack.serve": "webpack-dev-server"
   },
   "keywords": [],
   "author": "",
