--- a/src/vuetify-example/package.json
+++ b/src/vuetify-example/package.json
@@ -12,8 +12,8 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.10.2",
-    "@babel/preset-env": "^7.10.2",
+    "@babel/core": "^7.10.3",
+    "@babel/preset-env": "^7.10.3",
     "@webpack-cli/init": "^0.3.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.1.0",
@@ -22,16 +22,30 @@
     "babel-preset-es": "^1.0.0",
     "chai": "^4.2.0",
     "css-loader": "^3.5.3",
+    "deepmerge": "^4.2.2",
+    "eslint": "^7.3.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-vue": "^6.2.2",
+    "fibers": "^5.0.0",
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.5.1",
     "mocha": "^7.2.0",
-    "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
+    "prettier-eslint": "^11.0.0",
     "pug": "^2.0.4",
     "pug-loader": "^2.4.0",
     "pug-plain-loader": "^1.0.0",
     "raw-loader": "^4.0.1",
+    "sass": "^1.26.8",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
     "terser-webpack-plugin": "^2.3.7",
@@ -41,10 +55,11 @@
     "vue-router": "^3.3.2",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.11",
-    "vuetify": "^2.3.0",
+    "vuetify": "^2.3.1",
+    "vuetify-loader": "^1.5.0",
     "vuex": "^3.4.0",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   }
 }
