--- a/src/storybook-example/storybook-html/package.json
+++ b/src/storybook-example/storybook-html/package.json
@@ -24,22 +24,20 @@
     "@storybook/addon-links": "^5.3.19",
     "@storybook/addon-storysource": "^5.3.19",
     "@storybook/addon-viewport": "^5.3.19",
+    "@storybook/addons": "^5.3.19",
     "@storybook/cli": "^5.3.19",
     "@storybook/html": "^5.3.19",
+    "@storybook/theming": "^5.3.19",
     "@whitespace/storybook-addon-html": "^1.2.1",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.6.0",
     "event-emitter": "^0.3.5",
-    "fibers": "^5.0.0",
     "html-loader": "^1.1.0",
     "pug": "^3.0.0",
     "pug-plain-loader": "^1.0.0",
     "raw-loader": "^4.0.1",
     "sass": "^1.26.9",
     "sass-loader": "^8.0.2",
-    "style-loader": "^1.2.1",
-    "vue": "^2.6.11",
-    "vue-router": "^3.3.4",
-    "vuex": "^3.5.1"
+    "style-loader": "^1.2.1"
   }
 }
