--- a/src/storybook-example/storybook-html/package.json
+++ b/src/storybook-example/storybook-html/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.10.3",
+    "@babel/core": "^7.10.4",
+    "@babel/polyfill": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
     "@storybook/addon-a11y": "^5.3.19",
     "@storybook/addon-actions": "^5.3.19",
     "@storybook/addon-backgrounds": "^5.3.19",
