--- a/src/vue/vuewebpack-example/package.json
+++ b/src/vue/vuewebpack-example/package.json
@@ -12,15 +12,13 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.8.7",
-    "@babel/preset-env": "^7.8.7",
+    "@babel/core": "^7.10.4",
+    "@babel/polyfill": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
     "@webpack-cli/init": "^0.3.0",
     "axios": "^0.19.2",
-    "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
     "chai": "^4.2.0",
     "css-loader": "^3.4.2",
     "html-webpack-plugin": "^3.2.0",
