--- a/src/vuetify-example/package.json
+++ b/src/vuetify-example/package.json
@@ -12,14 +12,12 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.10.3",
-    "@babel/preset-env": "^7.10.3",
+    "@babel/core": "^7.10.4",
+    "@babel/polyfill": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
     "@webpack-cli/init": "^0.3.0",
-    "babel-core": "^6.26.3",
     "babel-loader": "^8.1.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-es": "^1.0.0",
     "chai": "^4.2.0",
     "css-loader": "^3.5.3",
     "deepmerge": "^4.2.2",
