--- a/src/webpack-example/package.json
+++ b/src/webpack-example/package.json
@@ -15,15 +15,17 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
+    "@babel/core": "^7.10.4",
+    "@babel/polyfill": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
     "@webpack-cli/init": "^0.1.5",
     "babel-loader": "^8.0.6",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "npm-run-all": "^4.1.5",
     "terser-webpack-plugin": "^1.2.4",
     "uglifyjs-webpack-plugin": "^2.1.3",
-    "webpack": "^4.31.0",
-    "webpack-cli": "^3.3.2"
+    "webpack": "^4.33.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
   }
 }
