--- a/src/vue/vuewebpack-example/package.json
+++ b/src/vue/vuewebpack-example/package.json
@@ -12,9 +12,10 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.10.4",
+    "@babel/core": "^7.10.5",
+    "@babel/plugin-transform-runtime": "7.10.5",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-env": "^7.10.5",
     "@mdi/font": "^5.3.45",
     "@mdi/js": "^5.3.45",
     "@webpack-cli/init": "^0.3.0",
