--- a/src/vuetify-example/package.json
+++ b/src/vuetify-example/package.json
@@ -12,50 +12,62 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.10.4",
-    "@babel/polyfill": "^7.10.4",
+    "@babel/core": "^7.10.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.10.5",
     "@babel/preset-env": "^7.10.4",
+    "@mdi/font": "^5.3.45",
+    "@mdi/js": "^5.3.45",
     "@webpack-cli/init": "^0.3.0",
+    "acorn": "^7.3.1",
+    "axios": "^0.19.2",
     "babel-loader": "^8.1.0",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "chai": "^4.2.0",
-    "css-loader": "^3.5.3",
+    "core-js": "^3.6.5",
+    "css-loader": "^3.6.0",
     "deepmerge": "^4.2.2",
-    "eslint": "^7.3.0",
+    "dotenv": "^8.2.0",
+    "dotenv-webpack": "^2.0.0",
+    "eslint": "^7.4.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-vue": "^6.2.2",
     "fibers": "^5.0.0",
-    "html-webpack-plugin": "^3.2.0",
-    "jquery": "^3.5.1",
-    "mocha": "^7.2.0",
+    "hard-source-webpack-plugin": "^0.13.1",
+    "html-webpack-plugin": "^4.3.0",
+    "jest": "^26.0.1",
+    "jest-extended": "^0.11.5",
+    "lodash": "^4.17.19",
+    "material-design-icons-iconfont": "^5.0.1",
     "npm-run-all": "^4.1.5",
-    "prettier": "^1.19.1",
-    "prettier-eslint": "^11.0.0",
-    "pug": "^2.0.4",
+    "papaparse": "^5.2.0",
+    "prettier": "^2.0.5",
+    "pug": "^3.0.0",
     "pug-loader": "^2.4.0",
     "pug-plain-loader": "^1.0.0",
     "raw-loader": "^4.0.1",
-    "sass": "^1.26.8",
-    "sass-loader": "^8.0.2",
+    "regenerator-runtime": "^0.13.5",
+    "sass": "^1.26.10",
+    "sass-loader": "^9.0.2",
     "style-loader": "^1.2.1",
-    "terser-webpack-plugin": "^2.3.7",
-    "url-loader": "^3.0.0",
+    "terser-webpack-plugin": "^3.0.6",
+    "url-loader": "^4.1.0",
+    "velocity-animate": "^1.5.2",
     "vue": "^2.6.11",
-    "vue-loader": "^15.9.2",
-    "vue-router": "^3.3.2",
+    "vue-cli-plugin-vuetify": "~2.0.5",
+    "vue-loader": "^15.9.3",
+    "vue-router": "^3.3.4",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.11",
-    "vuetify": "^2.3.1",
+    "vuetify": "^2.3.4",
     "vuetify-loader": "^1.5.0",
-    "vuex": "^3.4.0",
+    "vuex": "^3.5.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
